--- a/gol_py/CMakeLists.txt
+++ b/gol_py/CMakeLists.txt
@@ -17,3 +17,8 @@ target_link_libraries(gol_py gol_back glog  ${Boost_LIBRARIES} ${PYTHON_LIBRARIE
   # Tweaks the name of the library to match what Python expects
 set_target_properties(gol_py PROPERTIES SUFFIX .so)
 set_target_properties(gol_py PROPERTIES PREFIX "")
+
+add_custom_target (gol_py_script
+        DEPENDS gol_py
+        COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/check_all_func.py
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/)
