Use py script to gen cpp file initing template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ SET (CMAKE_CXX_COMPILER /usr/bin/clang++)
 project(game_of_life)
 
 SET(CMAKE_CXX_STANDARD 17)
+
+SET(GOL_MAX_DIM 10)
 include_directories(gol_back_inc)
 
 add_subdirectory(gol_back)
